--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE html>
-<!--
-	Metronic by TEMPLATE STOCK
-	templatestock.co @templatestock
-	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
--->
 
 
 <!DOCTYPE html>
@@ -20,7 +15,7 @@
 
 
 <!-- Title -->
-<title>Metronic Free HTML5 Responsive Template | Template Stock </title>
+<title> Owllearners Coming Soon Page </title>
 
 
 <!-- CSS Global Compulsory -->
@@ -80,11 +75,11 @@
 <div class="menu__inner">
 <ul>
 <li><a href="index.html"><i class="fa fa-fw fa-home"></i><span>Home</span></a></li>
-<li><a href="about.html"><i class="fa fa-fw fa-info"></i><span>About</span></a></li>
-<li><a href="team.html"><i class="fa fa-fw fa-users"></i><span>Team</span></a></li>
-<li><a href="services.html"><i class="fa fa-fw fa-gear"></i><span>Services</span></a></li>
-<li><a href="portfolio.html"><i class="fa fa-fw fa-camera"></i><span>Portfolio</span></a></li>
-<li><a href="contact.html"><i class="fa fa-fw fa-envelope"></i><span>Contact</span></a></li>
+<li><a href="index.html"><i class="fa fa-fw fa-info"></i><span>About</span></a></li>
+<li><a href="index.html"><i class="fa fa-fw fa-users"></i><span>Team</span></a></li>
+<li><a href="index.html"><i class="fa fa-fw fa-gear"></i><span>Services</span></a></li>
+<li><a href="index.html"><i class="fa fa-fw fa-camera"></i><span>Portfolio</span></a></li>
+<li><a href="index.html"><i class="fa fa-fw fa-envelope"></i><span>Contact</span></a></li>
 </ul>
 </div>
 <div class="morph-shape" data-morph-open="M300-10c0,0,295,164,295,410c0,232-295,410-295,410" data-morph-close="M300-10C300-10,5,154,5,400c0,232,295,410,295,410">
@@ -153,13 +148,13 @@
 </ul> 
 </nav><!-- /socials icons -->
 
-<!-- copyright -->
+<!-- copyright 
 <footer class="copy-right animated bounceInUp" data-animation-delay="700">
 <div class="copyright">
-© 2016 <a href="http://templatestock.co">Template Stock</a> - All Rights Reserved
+© 2018 <a href="http://templatestock.co">Template Stock</a> - All Rights Reserved
 </div>
 </footer><!-- /copyright -->
-
+-->
 </div><!-- /content slide -->
 </div>
 </div><!-- /row -->
