--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
 <div class="menu__inner">
 <ul>
 <li><a href="index.html"><i class="fa fa-fw fa-home"></i><span>Home</span></a></li>
-<li><a href="index.html"><i class="fa fa-fw fa-info"></i><span>About</span></a></li>
-<li><a href="index.html"><i class="fa fa-fw fa-users"></i><span>Team</span></a></li>
-<li><a href="index.html"><i class="fa fa-fw fa-gear"></i><span>Services</span></a></li>
-<li><a href="index.html"><i class="fa fa-fw fa-camera"></i><span>Portfolio</span></a></li>
-<li><a href="index.html"><i class="fa fa-fw fa-envelope"></i><span>Contact</span></a></li>
+<li><a href="#"><i class="fa fa-fw fa-info"></i><span>About</span></a></li>
+<li><a href="#"><i class="fa fa-fw fa-users"></i><span>Team</span></a></li>
+<li><a href="#"><i class="fa fa-fw fa-gear"></i><span>Services</span></a></li>
+<li><a href="#"><i class="fa fa-fw fa-camera"></i><span>Portfolio</span></a></li>
+<li><a href="#"><i class="fa fa-fw fa-envelope"></i><span>Contact</span></a></li>
 </ul>
 </div>
 <div class="morph-shape" data-morph-open="M300-10c0,0,295,164,295,410c0,232-295,410-295,410" data-morph-close="M300-10C300-10,5,154,5,400c0,232,295,410,295,410">
