--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
 <!-- header -->
 <header class="header-site">
 <div class="logo-site animated bounceInDown" data-animation-delay="700">
-<img class="img-responsive" src="images/logo.png" data-at2x="images/logo@2x.png" alt="Logo" />
+  <span> OWLEARNERS </span>
+<!--<img class="img-responsive" src="images/logo.png" data-at2x="images/logo@2x.png" alt="Logo" /-->
 </div>
 </header>
 <!-- /header -->
