--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 <!-- header -->
 <header class="header-site">
 <div class="logo-site animated bounceInDown" data-animation-delay="700">
-  <span> OWLEARNERS </span>
+  <span style="font-size: 30px !> OWLEARNERS </span>
 <!--<img class="img-responsive" src="images/logo.png" data-at2x="images/logo@2x.png" alt="Logo" /-->
 </div>
 </header>
