--- a/index.html
+++ b/index.html
@@ -119,23 +119,7 @@
 <div class="content-slide">
 <!-- Clock Countdown -->
 <div id="clock-countdown" class="animated bounceInDown" data-animation-delay="700"></div>
-<h3 class="color-white top-margin animated bounceInDown" data-animation-delay="700" >Our website is under construction. We`ll be here soon with our new awesome site, subscribe to be notified.</h3>
-
-<!-- Subscribe Form -->
-<div class="form animated bounceInUp" data-animation-delay="700">
-<!-- container form -->
-<div class="container-form">
-<!-- section page -->
-<div class="section-page" id="signup">
-<form class="subscription-form mailchimp" method="post" id="mc-form">
-<input type="email" id="email" class="border-radius-22 bottom-margin" name="email" placeholder="Enter Your Email Address" />
-<button type="submit" id="subscribebtn" class="border-button no-bottom-margin">Subscribe</button>
-</form>
-<p class="message-error"></p>
-<p class="message-success"></p>
-</div><!-- /section page -->
-</div><!-- /container form -->
-</div><!-- /Subscribe Form -->
+<h3 class="color-white top-margin animated bounceInDown" data-animation-delay="700" >Our website is under construction. We`ll be here soon with our new awesome site, Connect with us at connect@owlearners.com </h3>
 
 <!-- socials icons -->
 <nav class="socials-icons animated bounceInUp" data-animation-delay="700">
