--- a/index.html
+++ b/index.html
@@ -119,8 +119,9 @@
 <div class="content-slide">
 <!-- Clock Countdown -->
 <div id="clock-countdown" class="animated bounceInDown" data-animation-delay="700"></div>
-<h3 class="color-white top-margin animated bounceInDown" data-animation-delay="700" >Our website is under construction. We`ll be here soon with our new awesome site, Connect with us at connect@owlearners.com </h3>
-
+<h3 class="color-white top-margin animated bounceInDown" data-animation-delay="700" >Our website is under construction. We`ll be here soon with our new awesome site.<br>Connect with us at connect@owlearners.com </h3>
+<br>
+  <br>
 <!-- socials icons -->
 <nav class="socials-icons animated bounceInUp" data-animation-delay="700">
 <ul>
