--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 
 <!-- Title -->
-<title> Owllearners Coming Soon Page </title>
+<title> Owlearners Coming Soon Page </title>
 
 
 <!-- CSS Global Compulsory -->
