--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 <header class="header-site">
 <div class="logo-site animated bounceInDown" data-animation-delay="700">
   <h2> OWLEARNERS </h2>
-  <h3> LEARN PYTHON AND DATA SCIENCE! </h3>
+  <h3> LEARN <b>PYTHON</b> AND <b>DATA SCIENCE</b> </h3>
 <!--<img class="img-responsive" src="images/logo.png" data-at2x="images/logo@2x.png" alt="Logo" /-->
 </div>
 </header>
